update twin studio sleep and darkside

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   	<link rel='stylesheet' type='text/css' href='stylesheets/style.css'>
   	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Raleway" rel="stylesheet">
   	<title>Matt's New Website</title>
- </head>
+</head>
   
 <body>
 	<div class="grid">
@@ -19,10 +19,10 @@
 					<li><a href="pages/Projects.html">All projects</a></li>
 		            <li><a href="pages/Mattsmeals.html">Matt's Meals</a></li>
 		            <li><a href="pages/Guam.html">Guam</a></li>
-		            <li><a href="pages/Twinsstudio.html">Twins Studio</a></li>
-		            <li><a href="pages/Sleep.html">Sleep</a></li>
+		            <li><a href="pages/twinstudio.html">Twins Studio</a></li>
+		            <li><a href="pages/sleep.html">Sleep</a></li>
 		            <li><a href="pages/Baconbuddies.html">Bacon Buddies</a></li>
-		            <li><a href="pages/Darkside.html">Dark Side</a></li>
+		            <li><a href="pages/darkside.html">Dark Side</a></li>
 		        </ul>
 			</li>
 			<li><a href="#contact">Contact</a></li>
@@ -48,16 +48,16 @@
 	    			<img src="img/Guam.jpg" />
 	    		</div>
 	    		<div class="project">
-	    			<img src="img/Twinsstudio.jpg" />
+	    			<a href="pages/twinstudio.html"><img src="img/twinstudio.png" /></a>
 	    		</div>
 	    		<div class="project">
-	    			<img src="img/Sleep.jpg" />
+	    			<a href="pages/sleep.html"><img src="img/sleep.png" /></a>
 	    		</div>
 	    		<div class="project">
 	    			<img src="img/Baconbuddies.jpg" />
 	    		</div>
 	    		<div class="project">
-	    			<img src="img/Darkside.jpg" />
+	    			<a href="pages/darkside.html"><img src="img/darkside.png" /></a>
 	    		</div>
 	    	</div>
 	    	<button class="button">All projects</button>
