add metadata viewport size

--- a/pages/guam.html
+++ b/pages/guam.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="../stylesheets/guam.css">
+	<meta id="meta" name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Guam 2016</title>
 </head>
 <body>
 	<header>
