--- a/pages/mirae.html
+++ b/pages/mirae.html
@@ -4,6 +4,7 @@
 	<title>Mirae English</title>
 	<link rel="stylesheet" type="text/css" href="../stylesheets/mirae.css">
 	<link href="https://fonts.googleapis.com/css?family=Pacifico|Poiret+One|Roboto:400,700" rel="stylesheet">
+	<meta id="meta" name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
 	<div class="grid">
