--- a/pages/sleep.html
+++ b/pages/sleep.html
@@ -3,6 +3,8 @@
 <head>
 	<link rel="stylesheet" href="../stylesheets/sleep.css">
 	<link href="https://fonts.googleapis.com/css?family=Oswald:400,700" rel="stylesheet" type="text/css">
+	<meta id="meta" name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Sleep</title>
 </head>
 <body>
 	<div class="grid">
