--- a/pages/twinstudio.html
+++ b/pages/twinstudio.html
@@ -3,6 +3,8 @@
 <head>
 	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 	<link href='../stylesheets/twinstudio.css' rel='stylesheet' type='text/css'>
+	<meta id="meta" name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Twins Studio</title>
 </head>
 
 <body>
