--- a/pages/cv.html
+++ b/pages/cv.html
@@ -5,6 +5,7 @@
 		Matthew James Tootell
 	</title>
 	<link rel='stylesheet' type='text/css' href='../stylesheets/cv.css'>
+	<meta id="meta" name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
 	<header>
