--- a/pages/darkside.html
+++ b/pages/darkside.html
@@ -3,7 +3,9 @@
 	<head>
 		<link rel='stylesheet' type='text/css' href='../stylesheets/darkside.css'>
 		<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-		<link href="https://fonts.googleapis.com/css?family=New+Rocker" rel="stylesheet">		<title>
+		<link href="https://fonts.googleapis.com/css?family=New+Rocker" rel="stylesheet">
+		<meta id="meta" name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>
 			Join the Dark Side
 		</title>
 	</head>
