--- a/pages/halloween.html
+++ b/pages/halloween.html
@@ -4,6 +4,7 @@
 	<title>Halloween</title>
 	<link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../stylesheets/halloween.css">
+	<meta id="meta" name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
 	<div class="background">
