--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,6 +4,7 @@
   	<link rel='stylesheet' type='text/css' href='../stylesheets/projects.css'>
   	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Raleway" rel="stylesheet">
   	<title>Matt's New Website</title>
+  	<meta id="meta" name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
   
 <body>
