capitalize Guam image names

--- a/pages/guam.html
+++ b/pages/guam.html
@@ -28,19 +28,19 @@
 				<img src="../img/guamview.jpg" alt="Hotel photo"/>
 			</div>
 			<div class="pool photo c">
-				<img src="../img/guam5.jpg" alt="Pool photo"/>
+				<img src="../img/Guam5.jpg" alt="Pool photo"/>
 			</div>
 			<div class="pool photo d">
-				<img src="../img/guam3.jpg" alt="Pool photo"/>
+				<img src="../img/Guam3.jpg" alt="Pool photo"/>
 			</div>
 			<div class="pool photo e">
-				<img src="../img/guam2.jpg" alt="Pool photo"/>
+				<img src="../img/Guam2.jpg" alt="Pool photo"/>
 			</div>
 			<div class="pool photo f">
-				<img src="../img/guam9.jpg" alt="Pool photo"/>
+				<img src="../img/Guam9.jpg" alt="Pool photo"/>
 			</div>
 			<div class="pool photo g">
-				<img src="../img/guam4.jpg" alt="Pool photo"/>
+				<img src="../img/Guam4.jpg" alt="Pool photo"/>
 			</div>
 			<div class="pool info h">
 				<h3>The Pool</h3>
@@ -54,13 +54,13 @@
 				<img src="../img/guam11.jpg" alt="Guam photo"/>
 			</div>
 			<div class="guam photo k">
-				<img src="../img/guam7.jpg" alt="Guam photo"/>
+				<img src="../img/Guam7.jpg" alt="Guam photo"/>
 			</div>
 			<div class="guam photo l">
-				<img src="../img/guam6.jpg" alt="Guam photo"/>
+				<img src="../img/Guam6.jpg" alt="Guam photo"/>
 			</div>
 			<div class="guam photo m">
-				<img src="../img/guam8.jpg" alt="Guam photo"/>
+				<img src="../img/Guam8.jpg" alt="Guam photo"/>
 			</div>
 		</div>
 	</section>
