--- a/pages/cv.html
+++ b/pages/cv.html
@@ -13,14 +13,14 @@
 		<div class="contact">
 			<p>Email: matttootell@hotmail.com</p>
 			<p>Telephone: +82 10 2771 9116</p>
-			<p>Curriculum Vitae: <a href="../pages/cv.pdf" target="blank">PDF</a></p>
+			<p>Curriculum Vitae: <a href="../pages/cv.pdf" target="_blank">PDF</a></p>
 		</div>
 	</header>
 	<section>
 		<h2>Profile</h2>
 		<p>An experienced teacher who has run his own successful language academy in South Korea for over ten years, returning to the Lancashire area to begin a new career in web development.</p>
 		<h2>Relevant Skills</h2>
-		<p class="website">Online portfolio at <a href="#">www.matthewjames.xyz</a>.</p>
+		<p class="website">Online portfolio at <a href="https://miraematt.github.io/newwebsite/" target="_blank">https://miraematt.github.io/newwebsite/</a>.</p>
 
 		<div class="grid skills">
 			<p>2018</p>
