--- a/pages/mirae.html
+++ b/pages/mirae.html
@@ -100,7 +100,7 @@
 				</div>
 			</div>
 			<div class="copy right">
-				<h4>&copy matthew james 2018</h4>
+				<h4>&copy matthew james 2019</h4>
 			</div>
 		</footer>
 	</div>
@@ -113,7 +113,7 @@ function initMap() {
   // The map, centered at Mirae English
   var map = new google.maps.Map(
       document.getElementById('miraemap'), {zoom: 13, center: mirae});
-  // The marker, positioned at Uluru
+  // The marker, positioned at Mirae English
   var marker = new google.maps.Marker({position: mirae, map: map});
 }
     </script>
